--- a/assert/external_stylesheet/about_me_sec.css
+++ b/assert/external_stylesheet/about_me_sec.css
@@ -136,15 +136,15 @@ a:visited {
 }
 
 .no-padding {
-    padding: 0px !important;
-    margin: 0px !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 .preview {
     display: inline;
-    padding: 0px;
+    padding: 0;
 }
-@media screen and (max-width: 720px) {
+@media all and (max-width: 720px) {
     .bg-1 {
         height: 70vh;
         padding-top: 90px;
@@ -173,7 +173,7 @@ a:visited {
 
     #about_me_para_div{
         width: 100%;
-        padding: 10px 30px 0px 30px;
+        padding: 10px 30px 0 30px;
         /*display: flex;*/
         /*flex-direction: column;*/
         /*align-items: center;*/
