change some media queries

--- a/assert/external_stylesheet/contact_me_sec.css
+++ b/assert/external_stylesheet/contact_me_sec.css
@@ -227,3 +227,29 @@
 
 
 }
+
+/*.input-group:hover{*/
+/*    border: 1px solid goldenrod;*/
+/*    border-radius: 6px;*/
+/*}*/
+
+
+@media all and (max-width: 720px) {
+    #contact_main_div{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    #contact_info_p{
+        font-size: 13px;
+    }
+
+    .nice-form{
+        padding-right: 0;
+        padding-left: 0;
+        width: 70%;
+    }
+
+    #name, #email, #contact_no,#msg{
+        width: 100%;
+    }
+}
