--- a/assert/external_stylesheet/certificate_card.css
+++ b/assert/external_stylesheet/certificate_card.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .card__expander{
-    z-index: 2;
+    z-index: 10000;
     background-color: #2B343A;
 }
 
@@ -199,6 +199,10 @@
 @media screen and (max-width: 767px) {
     .card {
         width: 100%;
+    }
+
+    .header__title{
+        font-size: 25px;
     }
 }
 
