--- a/assert/external_stylesheet/project_sec.css
+++ b/assert/external_stylesheet/project_sec.css
@@ -43,19 +43,11 @@
 /*}*/
 
 #timeline {
-    /*padding: 100px 0;*/
-    /*background: #f7f7f7;*/
     top: 0;
     left: 0;
     right: 0;
-    /*margin: auto;*/
     margin-left: 10vw;
     margin-right: 10vw;
-    /*background: whitesmoke;*/
-    /*opacity: 70%;*/
-    /*box-shadow: 0px 1px 25px 1px #2B343A; ;*/
-    /*border-top: 1px solid rgba(191, 191, 191, 0.4);*/
-    /*border-bottom: 1px solid rgba(191, 191, 191, 0.4);*/
 
     display: flex;
     justify-content: center;
@@ -77,7 +69,7 @@
 }
 #timeline .demo-card-wrapper {
     position: relative;
-    margin: auto;
+    /*margin: auto;*/
     padding-top: 10px;
 }
 
@@ -95,7 +87,7 @@
     position: relative;
     display: block;
     margin: 10px auto 20px;
-    max-width: 94%;
+    max-width: 100%;
     z-index: 2;
 }
 
@@ -314,14 +306,20 @@
     }
 }
 
-@media screen and (max-width: 720px) {
+@media all and (max-width: 720px) {
     #timeline{
         margin-left: 5vw;
         margin-right: 5vw;
         padding: 0;
     }
-    .demo-card{
-        margin: 0;!important;
+    #timeline{
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .body{
+        padding-left: 0;
+        padding-right: 0;
     }
 
 }
