--- a/assert/external_stylesheet/assignment_sec.css
+++ b/assert/external_stylesheet/assignment_sec.css
@@ -153,6 +153,12 @@
 }
 
 
+#assign8case2, #assign8case1{
+    width: 50px;
+    height: 30px;
+    font-size: 10px;
+}
+
 @media all and (min-width: 720px) {
     .page-content {
         grid-template-columns: repeat(4, 1fr);
